# cloud-native-distributedsystem

./: .gitignore  README.md
APIs/: docker-compose.yml
APIs/Go/: .gitignore  api.rest  go.mod  go.sum  main.go
APIs/Google-Functions/: main.py
APIs/NodeJS-prometheus/: dashboard.json  datasources.yml  index.js  package.json  prometheus.yml  scripts.txt
APIs/Python/: Dockerfile  app.py  requirements.txt
APIs/Rust/: Cargo.toml
APIs/Rust/api-rust/: Cargo.toml  Dockerfile
APIs/Rust/api-rust/src/: main.rs
APIs/Rust/api-sopes1/: .dockerignore  Cargo.toml
APIs/Rust/api-sopes1/src/: main.rs
APIs/Rust/api-sopes1/src/handlers/: mod.rs
APIs/modulos-kernel-centos/: index.js  package-lock.json  package.json
APIs/modulos-kernel-debian/: index.js  package-lock.json
APIs/modulos-kernel-ubuntu/: index.js  package-lock.json  package.json
Backend-node/: .babelrc  .gitignore  api.rest  app.yaml  package-lock.json  package.json
Backend-node/src/: database.js  index.js  mongoDatabase.js
Consultas/: ConsultasSQL.sql
Consultas/ConsultasMongo/: index.js  package.json
Documentacion/: ManualTecnico.md  ManualUsuario.md  PreguntasReflexion.md
Generador de tráfico de Python/: main.py
Generador de tráfico de Python/Misc/: JsonUtilities.py  Traffic.py
Load Testers/Generador de tráfico de Go/: main.go
Load Testers/Generador de tráfico de Python/: main.py
Load Testers/Locust file/: LocustFile.py
Módulos Kernel/Módulo Ram/: Makefile  rammodule.c
Módulos_Kernel/Módulo_Procesos/: .processmodule_debian.ko.cmd  Makefile  modules.order  (+7 more)
react-front/: package.json
(+55 files in other folders)
