[package]
name = "api-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-rt = "2.2.0"
actix-service = "2.0.0"
tokio = { version = "1.4.0", features = ["time"] }
actix-web = "4.0.0-beta.5"
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
env_logger = "0.9.0"
base64 = "*"
google-pubsub1 = "2.0.8+20210322"
hyper = "0.14.13"
rustls = "0.19.1"
hyper-tls = "0.5.0"
hyper-rustls = "0.22.1"
yup-oauth2 = "5.1.0"
futures = "0.3.17"
mongodb = "2.0.0"
actix-json-responder = "0.1.0"
mysql = "*"