
[package]
name = "api-sopes1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
actix-web = "3"
dotenv = "0.15.0"
chrono = { version = "0.4.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
actix-rt = "1.1.1"
hyper = "0.14.12"
hyper-tls = "0.5.0"
tokio-core = "0.1.18"
bson = "1.0.0"
futures = "0.3.5"
mongodb = "1.0.0"
actix-json-responder = "0.1.0"
mysql = "*"


